--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,12 @@
 <div class="app w-100 d-flex flex-wrap flex-column justify-content-between">
   <app-header></app-header>
   <main class="app-main">
-    <!--  <div class="wrapper">
+    <div class="wrapper">
       <div class="page">
-        <div class="page-inner"> -->
-    <router-outlet></router-outlet>
-    <!--  </div>
+        <div class="page-inner">
+          <router-outlet></router-outlet>
+        </div>
       </div>
-    </div> -->
+    </div>
   </main>
 </div>
