feat: silabos route

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,5 +1,5 @@
 <div class="card form-signin text-center mt-5">
-  <form>
+  <form (submit)="cambiarVista($event)">
     <img
       class="my-4"
       src="https://getbootstrap.com/docs/5.0/assets/brand/bootstrap-logo.svg"
