--- a/src/app/components/card-silabo/card-silabo.component.html
+++ b/src/app/components/card-silabo/card-silabo.component.html
@@ -1,1 +1,29 @@
-<p>card-silabo works!</p>
+<div class="card border-secondary mb-3">
+  <div class="card-body">
+    <span class="card-title d-flex justify-content-between align-items-center">
+      <span class="h5">{{ silabo?.nombre_curso }}</span>
+      <button class="btn btn-outline-danger">
+        <fa-icon [icon]="faHeart"></fa-icon>
+      </button>
+    </span>
+    <hr />
+    <p>
+      <small>Ciclo: {{ silabo?.ciclo }}</small> -
+      <small>Peridio: {{ silabo?.peridio }}</small>
+    </p>
+    <p class="card-text">
+      {{ silabo?.descripcion }}
+    </p>
+    <div class="d-flex justify-content-between align-items-center">
+      <span>
+        <button class="btn btn-info">
+          <fa-icon [icon]="faPen"></fa-icon>
+        </button>
+        <button class="btn btn-warning mx-2">
+          <fa-icon [icon]="faTrashAlt"></fa-icon>
+        </button>
+      </span>
+      <small>{{ silabo?.fecha | date: "short" }}</small>
+    </div>
+  </div>
+</div>
