--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -18,7 +18,7 @@
           <a class="nav-link" href="#">Silabos</a>
         </li>
         <li class="nav-item">
-          <button class="btn btn-outline-success" type="button">Login</button>
+          <a class="btn btn-outline-success" routerLink="/">Login</a>
         </li>
       </ul>
     </div>
