--- a/src/app/components/home-silabos/home-silabos.component.html
+++ b/src/app/components/home-silabos/home-silabos.component.html
@@ -1,1 +1,15 @@
-<p>home-silabos works!</p>
+<div class="container">
+  <div class="row my-3">
+    <span class="h2">Barra de buqueda</span>
+  </div>
+  <div class="row my-3" *ngIf="silabos?.length > 0; else nosilabos">
+    <div class="col-12 col-md-6 col-lg-4" *ngFor="let silabo of silabos">
+      <app-card-silabo [silabo]="silabo"></app-card-silabo>
+    </div>
+  </div>
+  <ng-template #nosilabos>
+    <div class="row my-5">
+      <span class="h2">No tiene silabos creados</span>
+    </div>
+  </ng-template>
+</div>
