--- a/src/app/components/card-silabo/card-silabo.component.html
+++ b/src/app/components/card-silabo/card-silabo.component.html
@@ -16,10 +16,10 @@
     </p>
     <div class="d-flex justify-content-between align-items-center">
       <span>
-        <button class="btn btn-info">
+        <a class="btn btn-info" routerLink="/silabo/1">
           <fa-icon [icon]="faPen"></fa-icon>
-        </button>
-        <button class="btn btn-warning mx-2">
+        </a>
+        <button class="btn btn-warning mx-2" (click)="deleteSilabo()">
           <fa-icon [icon]="faTrashAlt"></fa-icon>
         </button>
       </span>
