--- a/src/app/components/home-silabos/home-silabos.component.html
+++ b/src/app/components/home-silabos/home-silabos.component.html
@@ -1,6 +1,52 @@
 <div class="container">
-  <div class="row my-3">
-    <span class="h2">Barra de buqueda</span>
+  <div class="row my-4">
+    <div class="col-8">
+      <div class="row">
+        <div class="col-4">
+          <select name="" id="" class="form-select form-select-sm">
+            <option value="">Seleccione</option>
+            <option value="">Ordenar por nombre</option>
+            <option value="">Ordenar por fecha</option>
+            <option value="">Ordenar por favoritos</option>
+          </select>
+        </div>
+        <div class="col-8">
+          <input
+            type="text"
+            class="form-control form-control-sm"
+            placeholder="Ingrese el nombre del silabo"
+          />
+        </div>
+      </div>
+    </div>
+    <div class="col-4">
+      <div class="row">
+        <div class="col-4">
+          <select name="" id="" class="form-select form-select-sm">
+            <option value="">5</option>
+            <option value="">10</option>
+            <option value="">15</option>
+          </select>
+        </div>
+        <div class="col-4">
+          <div
+            class="btn-group btn-group-md w-100"
+            role="group"
+            aria-label="Basic example"
+          >
+            <button type="button" class="btn btn-outline-secondary">
+              <fa-icon [icon]="faList"></fa-icon>
+            </button>
+            <button type="button" class="btn btn-secondary">
+              <fa-icon [icon]="faGrid"></fa-icon>
+            </button>
+          </div>
+        </div>
+        <div class="col-4">
+          <button type="button" class="btn btn-success" btn-block>Crear</button>
+        </div>
+      </div>
+    </div>
   </div>
   <div class="row my-3" *ngIf="silabos?.length > 0; else nosilabos">
     <div class="col-12 col-md-6 col-lg-4" *ngFor="let silabo of silabos">
