style: change style in login and header component

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -2,10 +2,10 @@
   <form (submit)="cambiarVista($event)">
     <img
       class="my-4"
-      src="https://getbootstrap.com/docs/5.0/assets/brand/bootstrap-logo.svg"
+      src="https://upload.wikimedia.org/wikipedia/commons/9/99/Sample_User_Icon.png"
       alt=""
-      width="72"
-      height="57"
+      width="100"
+      height="100"
     />
     <h1 class="h3 mb-3 fw-normal my-3">Inicio de sesión</h1>
 
