--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -2,23 +2,23 @@
   <div class="container">
     <a href="#" class="navbar-brand">Logo</a>
     <button
-      class="navbar-toggler"
+      class="navbar-toggler collapsed"
       type="button"
       data-bs-toggle="collapse"
       data-bs-target="#navbarResponsive"
       aria-controls="navbarResponsive"
-      aria-expanded="true"
+      aria-expanded="false"
       aria-label="Toggle navigation"
     >
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="navbar-collapse collapse show" id="navbarResponsive">
+    <div class="navbar-collapse collapse" id="navbarResponsive">
       <ul class="navbar-nav ms-md-auto">
         <li class="nav-item mx-3" *ngIf="login">
           <a class="nav-link" href="#">Silabos</a>
         </li>
         <li class="nav-item">
-          <a class="btn btn-outline-success" routerLink="/">Login</a>
+          <a class="btn btn-success" routerLink="/">Login</a>
         </li>
       </ul>
     </div>
