--- a/src/app/components/home-silabos/home-silabos.component.html
+++ b/src/app/components/home-silabos/home-silabos.component.html
@@ -1,8 +1,8 @@
 <div class="container">
   <div class="row my-4">
-    <div class="col-8">
+    <div class="col-12 col-lg-8">
       <div class="row">
-        <div class="col-4">
+        <div class="col-12 col-sm-4">
           <select name="" id="" class="form-select form-select-sm">
             <option value="">Seleccione</option>
             <option value="">Ordenar por nombre</option>
@@ -10,7 +10,7 @@
             <option value="">Ordenar por favoritos</option>
           </select>
         </div>
-        <div class="col-8">
+        <div class="col-12 col-sm-8 mt-3 mt-sm-0">
           <input
             type="text"
             class="form-control form-control-sm"
@@ -19,7 +19,7 @@
         </div>
       </div>
     </div>
-    <div class="col-4">
+    <div class="col-12 col-sm-8 col-lg-4 mt-3 mt-lg-0">
       <div class="row">
         <div class="col-4">
           <select name="" id="" class="form-select form-select-sm">
