--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
-html,body{
-    height: 100vh;
+html,
+body {
+  height: 100vh;
+}
+
+body::-webkit-scrollbar {
+  width: 7px;
+}
+body::-webkit-scrollbar-thumb {
+  background: #4582EC;
 }
