--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -34,3 +34,4 @@
     <p class="mt-5 mb-3 text-muted">&copy; 2021</p>
   </form>
 </div>
+<!-- <button class="btn btn-primary" (click)="click()">probando</button> -->
