feat: add new components

--- a/src/app/components/silabo/silabo.component.html
+++ b/src/app/components/silabo/silabo.component.html
@@ -1,205 +1,17 @@
 <div class="container mt-4">
-  <div class="row">
-    <div class="col-md-8">
-      <span class="h3">Nombre del curso</span>
-      <hr class="mt-2 mb-1" />
-      <small>Actualizado el 23/08/2021</small>
+  <app-header-silabo *ngIf="isEdit"></app-header-silabo>
+  <div class="row align-items-center" *ngIf="!isSelected">
+    <div class="col-6">
+      <select name="" id="" class="form-select" (change)="selectSilabo()">
+        <option value="" hidden>Seleccione un curso</option>
+        <option value="">Base de datos I - Plan 2018</option>
+        <option value="">Base de datos I - Plan 2015</option>
+      </select>
     </div>
-    <div
-      class="col-md-4 d-flex align-items-start justify-content-end mt-3 mt-md-0"
-    >
-      <button class="btn btn-outline-danger mx-1">
-        <fa-icon [icon]="faHeart"></fa-icon>
-      </button>
-      <button class="btn btn-info mx-1">
-        <fa-icon [icon]="faPen"></fa-icon>
-      </button>
-      <button class="btn btn-danger mx-1">
-        <fa-icon [icon]="faTrashAlt"></fa-icon>
-      </button>
-      <button class="btn btn-primary mx-1">
-        <fa-icon [icon]="faFileDownload"></fa-icon>
-      </button>
+    <div class="col-1 text-center">OR</div>
+    <div class="col-5">
+      <button class="btn btn-success">Crear nuevo silabo</button>
     </div>
   </div>
-  <div class="row mt-3">
-    <div class="col-4 my-2">
-      <label for="">Código de la asignatura</label>
-      <input type="text" class="form-control mt-2" />
-    </div>
-    <div class="col-4 my-2">
-      <label for="">Nombre del curso</label>
-      <input type="text" class="form-control mt-2" />
-    </div>
-    <div class="col-4 my-2">
-      <label for="">Tipo de asignatura</label>
-      <select name="" id="" class="form-select mt-2">
-        <option value="">Seleccione</option>
-        <option value="">Seleccione</option>
-        <option value="">Seleccione</option>
-        <option value="">Seleccione</option>
-      </select>
-    </div>
-    <div class="col-4 my-2">
-      <label for="">Horas semanales</label>
-      <select name="" id="" class="form-select mt-2">
-        <option value="">Seleccione</option>
-        <option value="">Seleccione</option>
-        <option value="">Seleccione</option>
-        <option value="">Seleccione</option>
-      </select>
-    </div>
-    <div class="col-2 my-2">
-      <label for="">Semestre académico</label>
-      <input type="text" class="form-control mt-2" />
-    </div>
-    <div class="col-2 my-2">
-      <label for="">Tipo de asignatura</label>
-      <select name="" id="" class="form-select mt-2">
-        <option value="">Seleccione</option>
-        <option value="">Seleccione</option>
-        <option value="">Seleccione</option>
-        <option value="">Seleccione</option>
-      </select>
-    </div>
-    <div class="col-2 my-2">
-      <label for="">Créditos</label>
-      <select name="" id="" class="form-select mt-2">
-        <option value="">Seleccione</option>
-        <option value="">Seleccione</option>
-        <option value="">Seleccione</option>
-        <option value="">Seleccione</option>
-      </select>
-    </div>
-    <div class="col-2 my-2">
-      <label for="">Modalidad</label>
-      <select name="" id="" class="form-select mt-2">
-        <option value="">Seleccione</option>
-        <option value="">Seleccione</option>
-        <option value="">Seleccione</option>
-        <option value="">Seleccione</option>
-      </select>
-    </div>
-    <div class="col-12 my-2">
-      <label for="">Sumilla</label>
-      <textarea name="" id="" rows="4" class="form-control mt-2"></textarea>
-    </div>
-    <div class="col-6 my-2">
-      <div class="row">
-        <div class="col-12">
-          <label for="">Docentes</label>
-          <select name="" id="" class="form-select mt-2">
-            <option value="">Seleccione</option>
-            <option value="">Seleccione</option>
-            <option value="">Seleccione</option>
-            <option value="">Seleccione</option>
-          </select>
-        </div>
-        <div class="col-12 mt-2">
-          <div class="card table-responsive p-3">
-            <table class="table">
-              <tbody>
-                <tr *ngFor="let i of [1, 2, 2, 3, 4]">
-                  <td>Nombre del docente</td>
-                  <td>correo del docente</td>
-                  <td>
-                    <button class="btn btn-sm btn-danger mx-1">
-                      <fa-icon [icon]="faTrashAlt"></fa-icon>
-                    </button>
-                  </td>
-                </tr>
-              </tbody>
-            </table>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="col-6 my-2">
-      <div class="row">
-        <div class="col-12">
-          <label for="">Competencias generales</label>
-          <select name="" id="" class="form-select mt-2">
-            <option value="">Seleccione</option>
-            <option value="">Seleccione</option>
-            <option value="">Seleccione</option>
-            <option value="">Seleccione</option>
-          </select>
-        </div>
-        <div class="col-12 mt-2">
-          <div class="card table-responsive p-3">
-            <table class="table">
-              <tbody>
-                <tr *ngFor="let i of [1, 2, 2, 3, 4]">
-                  <td>Competencia general</td>
-                  <td>
-                    <button class="btn btn-sm btn-danger mx-1">
-                      <fa-icon [icon]="faTrashAlt"></fa-icon>
-                    </button>
-                  </td>
-                </tr>
-              </tbody>
-            </table>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="col-6 my-2">
-      <div class="row">
-        <div class="col-12">
-          <label for="">Competencias especificas</label>
-          <select name="" id="" class="form-select mt-2">
-            <option value="">Seleccione</option>
-            <option value="">Seleccione</option>
-            <option value="">Seleccione</option>
-            <option value="">Seleccione</option>
-          </select>
-        </div>
-        <div class="col-12 mt-2">
-          <div class="card table-responsive p-3">
-            <table class="table">
-              <tbody>
-                <tr *ngFor="let i of [1, 2, 2, 3, 4]">
-                  <td>Competencia especifica</td>
-                  <td>
-                    <button class="btn btn-sm btn-danger mx-1">
-                      <fa-icon [icon]="faTrashAlt"></fa-icon>
-                    </button>
-                  </td>
-                </tr>
-              </tbody>
-            </table>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="col-6 my-2">
-      <div class="row">
-        <div class="col-12">
-          <label for="">Capacidades</label>
-          <select name="" id="" class="form-select mt-2">
-            <option value="">Seleccione</option>
-            <option value="">Seleccione</option>
-            <option value="">Seleccione</option>
-            <option value="">Seleccione</option>
-          </select>
-        </div>
-        <div class="col-12 mt-2">
-          <div class="card table-responsive p-3">
-            <table class="table">
-              <tbody>
-                <tr *ngFor="let i of [1, 2, 2, 3, 4]">
-                  <td>Capacidad</td>
-                  <td>
-                    <button class="btn btn-sm btn-danger mx-1">
-                      <fa-icon [icon]="faTrashAlt"></fa-icon>
-                    </button>
-                  </td>
-                </tr>
-              </tbody>
-            </table>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
+  <app-form-silabo *ngIf="isSelected"></app-form-silabo>
 </div>
