style: align button

--- a/src/app/components/home-silabos/home-silabos.component.html
+++ b/src/app/components/home-silabos/home-silabos.component.html
@@ -58,7 +58,7 @@
             </button>
           </div>
         </div>
-        <div class="col-4">
+        <div class="col-4 d-flex flex-row-reverse">
           <button type="button" class="btn btn-success">Crear</button>
         </div>
       </div>
