--- a/src/app/components/form-silabo/form-silabo.component.html
+++ b/src/app/components/form-silabo/form-silabo.component.html
@@ -1,55 +1,96 @@
-<div class="row mt-3">
-  <div class="col-4 my-2">
-    <label for="">Código de la asignatura</label>
-    <input type="text" class="form-control mt-2" />
+<div class="row mt-3" [formGroup]="silaboForm" autocomplete="off">
+  <div class="col-sm-6 col-lg-4 my-2">
+    <label for="codigo_id">Código de la asignatura</label>
+    <input
+      type="text"
+      id="codigo_id"
+      class="form-control mt-2"
+      formControlName="codigo"
+    />
   </div>
-  <div class="col-4 my-2">
-    <label for="">Nombre del curso</label>
-    <input type="text" class="form-control mt-2" />
+  <div class="col-sm-6 col-lg-4 my-2">
+    <label for="nombre_id">Nombre del curso</label>
+    <input
+      type="text"
+      id="nombre_id"
+      class="form-control mt-2"
+      formControlName="nombre"
+    />
   </div>
-  <div class="col-4 my-2">
-    <label for="">Tipo de asignatura</label>
-    <select name="" id="" class="form-select mt-2">
+  <div class="col-sm-6 col-lg-4 my-2">
+    <label for="tipo_id">Tipo de asignatura</label>
+    <select
+      name=""
+      id="tipo_id"
+      class="form-select mt-2"
+      formControlName="tipo"
+    >
       <option value="">Seleccione</option>
-      <option value="">Seleccione</option>
-      <option value="">Seleccione</option>
-      <option value="">Seleccione</option>
+      <option value="1">Seleccione</option>
+      <option value="2">Seleccione</option>
+      <option value="3">Seleccione</option>
     </select>
   </div>
-  <div class="col-4 my-2">
-    <label for="">Horas semanales</label>
-    <select name="" id="" class="form-select mt-2">
+  <div class="col-sm-6 col-lg-4 my-2">
+    <label for="horas_id">Horas semanales</label>
+    <select
+      name=""
+      id="horas_id"
+      class="form-select mt-2"
+      formControlName="horas"
+    >
       <option value="">Seleccione</option>
-      <option value="">Seleccione</option>
-      <option value="">Seleccione</option>
-      <option value="">Seleccione</option>
+      <option value="1">Seleccione</option>
+      <option value="2">Seleccione</option>
+      <option value="3">Seleccione</option>
     </select>
   </div>
-  <div class="col-2 my-2">
-    <label for="">Semestre académico</label>
-    <input type="text" class="form-control mt-2" value="2021 - 2" />
+  <div class="col-sm-6 col-md-3 col-lg-2 my-2">
+    <label for="semestre_id">Semestre</label>
+    <input
+      type="text"
+      id="semestre_id"
+      class="form-control mt-2"
+      placeholder="2021-2"
+      formControlName="semestre"
+    />
   </div>
-  <div class="col-2 my-2">
-    <label for="">Ciclo</label>
-    <select name="" id="" class="form-select mt-2">
+  <div class="col-sm-6 col-md-3 col-lg-2 my-2">
+    <label for="ciclo_id">Ciclo</label>
+    <select
+      name=""
+      id="ciclo_id"
+      class="form-select mt-2"
+      formControlName="ciclo"
+    >
       <option value="" hidden>Seleccione</option>
-      <option value="">I Ciclo</option>
-      <option value="">II Ciclo</option>
-      <option value="">III Ciclo</option>
+      <option value="1">I Ciclo</option>
+      <option value="2">II Ciclo</option>
+      <option value="3">III Ciclo</option>
     </select>
   </div>
-  <div class="col-2 my-2">
-    <label for="">Créditos</label>
-    <select name="" id="" class="form-select mt-2">
+  <div class="col-sm-6 col-md-3 col-lg-2 my-2">
+    <label for="creditos_id">Créditos</label>
+    <select
+      name=""
+      id="creditos_id"
+      class="form-select mt-2"
+      formControlName="creditos"
+    >
       <option value="">Seleccione</option>
       <option value="">Seleccione</option>
       <option value="">Seleccione</option>
       <option value="">Seleccione</option>
     </select>
   </div>
-  <div class="col-2 my-2">
-    <label for="">Modalidad</label>
-    <select name="" id="" class="form-select mt-2">
+  <div class="col-sm-6 col-md-3 col-lg-2 my-2">
+    <label for="modalidad_id">Modalidad</label>
+    <select
+      name=""
+      id="modalidad_id"
+      class="form-select mt-2"
+      formControlName="modalidad"
+    >
       <option value="">Seleccione</option>
       <option value="">Seleccione</option>
       <option value="">Seleccione</option>
@@ -57,8 +98,14 @@
     </select>
   </div>
   <div class="col-12 my-2">
-    <label for="">Sumilla</label>
-    <textarea name="" id="" rows="4" class="form-control mt-2"></textarea>
+    <label for="sumilla_id">Sumilla</label>
+    <textarea
+      name=""
+      id="sumilla_id"
+      rows="4"
+      class="form-control mt-2"
+      formControlName="sumilla"
+    ></textarea>
   </div>
   <div class="col-6 my-2">
     <div class="row">
@@ -176,5 +223,10 @@
         </div>
       </div>
     </div>
+  </div>
+  <div class="col-12 my-3 d-flex flex-row-reverse">
+    <button class="btn btn-outline-primary" (click)="saveSilabo()">
+      Guardar
+    </button>
   </div>
 </div>
