--- a/src/app/components/silabo/silabo.component.html
+++ b/src/app/components/silabo/silabo.component.html
@@ -1,15 +1,15 @@
 <div class="container mt-4">
   <app-header-silabo *ngIf="isEdit"></app-header-silabo>
   <div class="row align-items-center" *ngIf="!isSelected">
-    <div class="col-6">
+    <div class="col-sm-6">
       <select name="" id="" class="form-select" (change)="selectSilabo()">
         <option value="" hidden>Seleccione un curso</option>
         <option value="">Base de datos I - Plan 2018</option>
         <option value="">Base de datos I - Plan 2015</option>
       </select>
     </div>
-    <div class="col-1 text-center">OR</div>
-    <div class="col-5">
+    <div class="col-sm-1 my-3 my-sm-0 text-center">OR</div>
+    <div class="col-sm-5 text-center text-sm-start">
       <button class="btn btn-success">Crear nuevo silabo</button>
     </div>
   </div>
