--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -30,8 +30,9 @@
       <label for="floatingPassword">Contraseña</label>
     </div>
 
-    <button class="w-100 btn btn-lg btn-primary" type="submit">Sign in</button>
+    <button class="w-100 btn btn-lg btn-primary" type="submit">
+      Iniciar sesión
+    </button>
     <p class="mt-5 mb-3 text-muted">&copy; 2021</p>
   </form>
 </div>
-<!-- <button class="btn btn-primary" (click)="click()">probando</button> -->
