--- a/src/app/components/card-silabo/card-silabo.component.html
+++ b/src/app/components/card-silabo/card-silabo.component.html
@@ -1,18 +1,18 @@
 <div class="card border-secondary mb-3">
   <div class="card-body">
     <span class="card-title d-flex justify-content-between align-items-center">
-      <span class="h5">{{ silabo?.nombre_curso }}</span>
+      <span class="h5">{{ silabo?.asig_nombre }}</span>
       <button class="btn btn-outline-danger">
         <fa-icon [icon]="faHeart"></fa-icon>
       </button>
     </span>
     <hr />
     <p>
-      <small>Ciclo: {{ silabo?.ciclo }}</small> -
-      <small>Peridio: {{ silabo?.peridio }}</small>
+      <small>Ciclo: {{ silabo?.asig_ciclo }}</small> -
+      <small>Periodo: {{ silabo?.peridio }}</small>
     </p>
     <p class="card-text">
-      {{ silabo?.descripcion }}
+      {{ silabo?.asig_sumilla }}
     </p>
     <div class="d-flex justify-content-between align-items-center">
       <span>
