--- a/src/app/components/card-silabo/card-silabo.component.html
+++ b/src/app/components/card-silabo/card-silabo.component.html
@@ -9,21 +9,21 @@
     <hr />
     <p>
       <small>Ciclo: {{ silabo?.asig_ciclo }}</small> -
-      <small>Periodo: {{ silabo?.peridio }}</small>
+      <small>Periodo: </small>
     </p>
     <p class="card-text">
       {{ silabo?.asig_sumilla }}
     </p>
     <div class="d-flex justify-content-between align-items-center">
       <span>
-        <a class="btn btn-info" routerLink="/silabo/1">
+        <a class="btn btn-info" (click)="editSilabo()">
           <fa-icon [icon]="faPen"></fa-icon>
         </a>
         <button class="btn btn-warning mx-2" (click)="deleteSilabo()">
           <fa-icon [icon]="faTrashAlt"></fa-icon>
         </button>
       </span>
-      <small>{{ silabo?.fecha | date: "short" }}</small>
+      <small>fecha</small>
     </div>
   </div>
 </div>
