feat: manage edit and new silabo forms

--- a/src/app/components/header-silabo/header-silabo.component.html
+++ b/src/app/components/header-silabo/header-silabo.component.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-md-8">
-    <span class="h3">Nombre del curso</span>
+    <span class="h3">{{ silabo?.asig_nombre }}</span>
     <hr class="mt-2 mb-1" />
     <small>Actualizado el 23/08/2021</small>
   </div>
