--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,7 +1,7 @@
 <div class="navbar navbar-expand-md navbar-light bg-light">
   <div class="container">
     <a routerLink="/" class="navbar-brand" *ngIf="!login">Logo</a>
-    <a routerLink="/silabo" class="navbar-brand" *ngIf="login">Logo</a>
+    <a routerLink="/silabos" class="navbar-brand" *ngIf="login">Logo</a>
     <button
       class="navbar-toggler collapsed"
       type="button"
@@ -16,7 +16,7 @@
     <div class="navbar-collapse collapse" id="navbarResponsive">
       <ul class="navbar-nav ms-md-auto">
         <li class="nav-item mx-3" *ngIf="login">
-          <a class="nav-link" routerLink="/silabo">Silabos</a>
+          <a class="nav-link" routerLink="/silabos">Silabos</a>
         </li>
         <li class="nav-item">
           <a class="btn btn-success" routerLink="/" *ngIf="!login"> Login </a>
