--- a/src/app/components/home-silabos/home-silabos.component.html
+++ b/src/app/components/home-silabos/home-silabos.component.html
@@ -59,7 +59,13 @@
           </div>
         </div>
         <div class="col-4 d-flex flex-row-reverse">
-          <button type="button" class="btn btn-success">Crear</button>
+          <button
+            type="button"
+            class="btn btn-success"
+            (click)="createSilabo()"
+          >
+            Crear
+          </button>
         </div>
       </div>
     </div>
