--- a/src/app/components/silabo/silabo.component.html
+++ b/src/app/components/silabo/silabo.component.html
@@ -1,14 +1,31 @@
 <div class="container mt-4">
-  <app-header-silabo *ngIf="isEdit"></app-header-silabo>
-  <div class="row align-items-center" *ngIf="!isSelected && !isNewCourse">
+  <app-header-silabo *ngIf="isEdit" [silabo]="silabo"></app-header-silabo>
+
+  <div *ngIf="isSelected || isNewCourse" class="my-2">
+    <span class="h3">Creando nuevo {{ isSelected ? "Silabo" : "Curso" }}</span>
+  </div>
+
+  <div
+    class="row align-items-center"
+    *ngIf="!isSelected && !isNewCourse && !isEdit"
+  >
     <div class="col-12 mb-4">
-      <span class="h3">Seleccione un curso o cree uno nuevo</span>
+      <span class="h3">Seleccione una opción</span>
     </div>
     <div class="col-sm-6">
-      <select name="" id="" class="form-select" (change)="selectSilabo()">
+      <select
+        name=""
+        id=""
+        class="form-select"
+        [(ngModel)]="curso"
+        (change)="selectSilabo()"
+      >
         <option value="" hidden>Seleccione un curso</option>
-        <option value="">Base de datos I - Plan 2018</option>
-        <option value="">Base de datos I - Plan 2015</option>
+        <!-- <option value="">Base de datos I - Plan 2018</option>
+        <option value="">Base de datos I - Plan 2015</option> -->
+        <option *ngFor="let c of cursos" [ngValue]="c">
+          {{ c?.asig_nombre }}
+        </option>
       </select>
     </div>
     <div class="col-sm-1 my-3 my-sm-0 text-center">O</div>
@@ -18,6 +35,11 @@
       </button>
     </div>
   </div>
-  <app-form-silabo *ngIf="isSelected"></app-form-silabo>
+  <app-form-silabo
+    *ngIf="isSelected || isEdit"
+    [isEdit]="isEdit"
+    [silabo]="silabo"
+    [curso]="curso"
+  ></app-form-silabo>
   <app-new-course *ngIf="isNewCourse"></app-new-course>
 </div>
