feat: format files

--- a/src/app/components/form-silabo/form-silabo.component.html
+++ b/src/app/components/form-silabo/form-silabo.component.html
@@ -91,10 +91,9 @@
       class="form-select mt-2"
       formControlName="modalidad"
     >
-      <option value="">Seleccione</option>
-      <option value="">Seleccione</option>
-      <option value="">Seleccione</option>
-      <option value="">Seleccione</option>
+      <option value="" hidden>Seleccione</option>
+      <option value="1">Presencial</option>
+      <option value="2">Virutal</option>
     </select>
   </div>
   <div class="col-12 my-2">
