--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,12 +1,6 @@
 <div class="card form-signin text-center mt-5">
-  <form [formGroup]="form" (submit)="cambiarVista($event)">
-    <img
-      class="my-4"
-      src="https://upload.wikimedia.org/wikipedia/commons/9/99/Sample_User_Icon.png"
-      alt=""
-      width="100"
-      height="100"
-    />
+  <form [formGroup]="loginform" (submit)="cambiarVista($event)">
+    <img class="my-4" src="assets/user.png" alt="" width="100" height="100" />
     <h1 class="h3 mb-3 fw-normal my-3">Inicio de sesión</h1>
 
     <div class="form-floating my-3">
