--- a/src/app/components/home-silabos/home-silabos.component.html
+++ b/src/app/components/home-silabos/home-silabos.component.html
@@ -4,10 +4,10 @@
       <div class="row">
         <div class="col-12 col-sm-4">
           <select name="" id="" class="form-select form-select-sm">
-            <option value="">Seleccione</option>
-            <option value="">Ordenar por nombre</option>
-            <option value="">Ordenar por fecha</option>
-            <option value="">Ordenar por favoritos</option>
+            <option value="" hidden>Seleccione</option>
+            <option value="1">Ordenar por nombre</option>
+            <option value="2">Ordenar por fecha</option>
+            <option value="3">Ordenar por favoritos</option>
           </select>
         </div>
         <div class="col-12 col-sm-8 mt-3 mt-sm-0">
@@ -23,9 +23,9 @@
       <div class="row">
         <div class="col-4">
           <select name="" id="" class="form-select form-select-sm">
-            <option value="">5</option>
-            <option value="">10</option>
-            <option value="">15</option>
+            <option value="5">5</option>
+            <option value="10">10</option>
+            <option value="15">15</option>
           </select>
         </div>
         <div class="col-4">
