--- a/src/app/components/home-silabos/home-silabos.component.html
+++ b/src/app/components/home-silabos/home-silabos.component.html
@@ -61,7 +61,7 @@
         <div class="col-4 d-flex flex-row-reverse">
           <button
             type="button"
-            class="btn btn-success"
+            class="btn btn-success px-4"
             (click)="createSilabo()"
           >
             Crear
