--- a/src/app/components/card-silabo/card-silabo.component.html
+++ b/src/app/components/card-silabo/card-silabo.component.html
@@ -1,7 +1,7 @@
 <div class="card border-secondary mb-3">
   <div class="card-body">
     <span class="card-title d-flex justify-content-between align-items-center">
-      <span class="h5">{{ silabo?.asig_nombre }}</span>
+      <span class="h5">{{ silabo?.asig_nombre | truncate: "5" }}</span>
       <button class="btn btn-outline-danger">
         <fa-icon [icon]="faHeart"></fa-icon>
       </button>
@@ -12,7 +12,7 @@
       <small>Periodo: {{ silabo?.periodo_academico }}</small>
     </p>
     <p class="card-text">
-      {{ silabo?.asig_sumilla }}
+      {{ silabo?.asig_sumilla | truncate: "35" }}
     </p>
     <div class="d-flex justify-content-between align-items-center">
       <span>
