--- a/src/app/components/home-silabos/home-silabos.component.html
+++ b/src/app/components/home-silabos/home-silabos.component.html
@@ -22,7 +22,16 @@
     <div class="col-12 col-sm-8 col-lg-4 mt-3 mt-lg-0">
       <div class="row">
         <div class="col-4">
-          <select name="" id="" class="form-select form-select-sm">
+          <select
+            name=""
+            id=""
+            [(ngModel)]="pageSize"
+            class="form-select form-select-sm"
+          >
+            <option value="1">1</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+            <option value="4">4</option>
             <option value="5">5</option>
             <option value="10">10</option>
             <option value="15">15</option>
@@ -82,44 +91,26 @@
       </div>
     </ng-container>
     <ng-template #silaboslist>
-      <div class="col-12" *ngFor="let silabo of silabos">
+      <div
+        class="col-12"
+        *ngFor="
+          let silabo of silabos | slice: (page - 1) * pageSize:page * pageSize
+        "
+      >
         <app-card-silabos-list [silabo]="silabo"></app-card-silabos-list>
       </div>
     </ng-template>
-    <ngb-pagination
-      [(page)]="page"
-      [pageSize]="pageSize"
-      [collectionSize]="silabos.length"
-    ></ngb-pagination>
+    <div class="d-flex justify-content-center my-5">
+      <ngb-pagination
+        [(page)]="page"
+        [pageSize]="pageSize"
+        [collectionSize]="silabos.length"
+      ></ngb-pagination>
+    </div>
   </div>
   <ng-template #nosilabos>
     <div class="row my-5">
       <span class="h2">No tiene silabos creados</span>
     </div>
   </ng-template>
-  <!-- <div class="d-flex justify-content-center mb-5">
-    <ul class="pagination">
-      <li class="page-item disabled">
-        <a class="page-link" href="#">&laquo;</a>
-      </li>
-      <li class="page-item active">
-        <a class="page-link" href="#">1</a>
-      </li>
-      <li class="page-item">
-        <a class="page-link" href="#">2</a>
-      </li>
-      <li class="page-item">
-        <a class="page-link" href="#">3</a>
-      </li>
-      <li class="page-item">
-        <a class="page-link" href="#">4</a>
-      </li>
-      <li class="page-item">
-        <a class="page-link" href="#">5</a>
-      </li>
-      <li class="page-item">
-        <a class="page-link" href="#">&raquo;</a>
-      </li>
-    </ul>
-  </div> -->
 </div>
