--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,7 +1,6 @@
 <div class="navbar navbar-expand-md navbar-light bg-light">
   <div class="container">
-    <a routerLink="/" class="navbar-brand" *ngIf="!login">Logo</a>
-    <a routerLink="/silabos" class="navbar-brand" *ngIf="login">Logo</a>
+    <a routerLink="/" class="navbar-brand">Logo</a>
     <button
       class="navbar-toggler collapsed"
       type="button"
