--- a/src/app/components/home-silabos/home-silabos.component.html
+++ b/src/app/components/home-silabos/home-silabos.component.html
@@ -3,8 +3,8 @@
     <div class="col-12 col-lg-8">
       <div class="row">
         <div class="col-12 col-sm-4">
-          <select name="" id="" class="form-select form-select-sm">
-            <option value="" hidden>Seleccione</option>
+          <select [(ngModel)]="filterSelect" class="form-select form-select-sm">
+            <option value="0" hidden>Seleccione</option>
             <option value="1">Ordenar por nombre</option>
             <option value="2">Ordenar por fecha</option>
             <option value="3">Ordenar por favoritos</option>
@@ -13,8 +13,9 @@
         <div class="col-12 col-sm-8 mt-3 mt-sm-0">
           <input
             type="text"
+            [(ngModel)]="filterSearch"
             class="form-control form-control-sm"
-            placeholder="Ingrese el nombre del silabo"
+            placeholder="Ingrese el nombre del curso del silabo"
           />
         </div>
       </div>
@@ -22,12 +23,7 @@
     <div class="col-12 col-sm-8 col-lg-4 mt-3 mt-lg-0">
       <div class="row">
         <div class="col-4">
-          <select
-            name=""
-            id=""
-            [(ngModel)]="pageSize"
-            class="form-select form-select-sm"
-          >
+          <select [(ngModel)]="pageSize" class="form-select form-select-sm">
             <option value="1">1</option>
             <option value="2">2</option>
             <option value="3">3</option>
@@ -84,7 +80,9 @@
       <div
         class="col-12 col-md-6 col-lg-4"
         *ngFor="
-          let silabo of silabos | slice: (page - 1) * pageSize:page * pageSize
+          let silabo of silabos
+            | slice: (page - 1) * pageSize:page * pageSize
+            | search: 'asig_nombre':filterSearch
         "
       >
         <app-card-silabo [silabo]="silabo"></app-card-silabo>
