--- a/src/app/components/form-silabo/form-silabo.component.html
+++ b/src/app/components/form-silabo/form-silabo.component.html
@@ -26,9 +26,8 @@
       formControlName="tipo"
     >
       <option value="">Seleccione</option>
-      <option value="1">Seleccione</option>
-      <option value="2">Seleccione</option>
-      <option value="3">Seleccione</option>
+      <option value="1">Obligatorio</option>
+      <option value="2">Electivo</option>
     </select>
   </div>
   <div class="col-sm-6 col-lg-4 my-2">
@@ -40,9 +39,8 @@
       formControlName="horas"
     >
       <option value="">Seleccione</option>
-      <option value="1">Seleccione</option>
-      <option value="2">Seleccione</option>
-      <option value="3">Seleccione</option>
+      <option value="1">3 Teoria - 2 Laboratorio</option>
+      <option value="2">4 Teoria - 2 Laboratorio</option>
     </select>
   </div>
   <div class="col-sm-6 col-md-3 col-lg-2 my-2">
@@ -64,9 +62,16 @@
       formControlName="ciclo"
     >
       <option value="" hidden>Seleccione</option>
-      <option value="1">I Ciclo</option>
-      <option value="2">II Ciclo</option>
-      <option value="3">III Ciclo</option>
+      <option value="I">I Ciclo</option>
+      <option value="II">II Ciclo</option>
+      <option value="III">III Ciclo</option>
+      <option value="IV">IV Ciclo</option>
+      <option value="V">V Ciclo</option>
+      <option value="VI">VI Ciclo</option>
+      <option value="VII">VII Ciclo</option>
+      <option value="VIII">VIII Ciclo</option>
+      <option value="IX">IX Ciclo</option>
+      <option value="X">X Ciclo</option>
     </select>
   </div>
   <div class="col-sm-6 col-md-3 col-lg-2 my-2">
@@ -78,9 +83,8 @@
       formControlName="creditos"
     >
       <option value="">Seleccione</option>
-      <option value="">Seleccione</option>
-      <option value="">Seleccione</option>
-      <option value="">Seleccione</option>
+      <option value="3">3 Créditos</option>
+      <option value="4">4 Créditos</option>
     </select>
   </div>
   <div class="col-sm-6 col-md-3 col-lg-2 my-2">
@@ -101,7 +105,7 @@
     <textarea
       name=""
       id="sumilla_id"
-      rows="4"
+      rows="10"
       class="form-control mt-2"
       formControlName="sumilla"
     ></textarea>
