chore: add placeholder

--- a/src/app/components/form-silabo/form-silabo.component.html
+++ b/src/app/components/form-silabo/form-silabo.component.html
@@ -19,12 +19,7 @@
   </div>
   <div class="col-sm-6 col-lg-4 my-2">
     <label for="tipo_id">Tipo de asignatura</label>
-    <select
-      name=""
-      id="tipo_id"
-      class="form-select mt-2"
-      formControlName="tipo"
-    >
+    <select id="tipo_id" class="form-select mt-2" formControlName="tipo">
       <option value="">Seleccione</option>
       <option value="1">Obligatorio</option>
       <option value="2">Electivo</option>
@@ -55,12 +50,7 @@
   </div>
   <div class="col-sm-6 col-md-3 col-lg-2 my-2">
     <label for="ciclo_id">Ciclo</label>
-    <select
-      name=""
-      id="ciclo_id"
-      class="form-select mt-2"
-      formControlName="ciclo"
-    >
+    <select id="ciclo_id" class="form-select mt-2" formControlName="ciclo">
       <option value="" hidden>Seleccione</option>
       <option value="I">I Ciclo</option>
       <option value="II">II Ciclo</option>
@@ -77,7 +67,6 @@
   <div class="col-sm-6 col-md-3 col-lg-2 my-2">
     <label for="creditos_id">Créditos</label>
     <select
-      name=""
       id="creditos_id"
       class="form-select mt-2"
       formControlName="creditos"
@@ -90,7 +79,6 @@
   <div class="col-sm-6 col-md-3 col-lg-2 my-2">
     <label for="modalidad_id">Modalidad</label>
     <select
-      name=""
       id="modalidad_id"
       class="form-select mt-2"
       formControlName="modalidad"
@@ -103,7 +91,6 @@
   <div class="col-12 my-2">
     <label for="sumilla_id">Sumilla</label>
     <textarea
-      name=""
       id="sumilla_id"
       rows="10"
       class="form-control mt-2"
