--- a/src/app/components/home-silabos/home-silabos.component.html
+++ b/src/app/components/home-silabos/home-silabos.component.html
@@ -104,7 +104,9 @@
       <ngb-pagination
         [(page)]="page"
         [pageSize]="pageSize"
-        [collectionSize]="silabos.length"
+        [collectionSize]="
+          (silabos | search: 'asig_nombre':filterSearch)?.length
+        "
       ></ngb-pagination>
     </div>
   </div>
