--- a/src/app/components/home-silabos/home-silabos.component.html
+++ b/src/app/components/home-silabos/home-silabos.component.html
@@ -16,6 +16,7 @@
             [(ngModel)]="filterSearch"
             class="form-control form-control-sm"
             placeholder="Ingrese el nombre del curso del silabo"
+            autofocus
           />
         </div>
       </div>
@@ -75,7 +76,13 @@
       </div>
     </div>
   </div>
-  <div class="row my-3" *ngIf="silabos?.length > 0; else nosilabos">
+  <div
+    class="row my-3"
+    *ngIf="
+      (silabos | search: 'asig_nombre':filterSearch)?.length > 0;
+      else nosilabos
+    "
+  >
     <ng-container *ngIf="viewSilabosGrid; else silaboslist">
       <div
         class="col-12 col-md-6 col-lg-4"
