--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -14,10 +14,11 @@
         autofocus
       />
       <label for="floatingInput">Correo institucional</label>
-      <small class="text-danger mt-3 mt-lg-0" *ngIf="correoNoValido">
+      <small class="text-danger mt-3" id="left" *ngIf="correoNoValido">
         Ingrese un correo válido
       </small>
     </div>
+
     <div class="form-floating my-3">
       <input
         type="password"
@@ -28,7 +29,7 @@
         [class.is-invalid]="passwordNoValido"
       />
       <label for="floatingPassword">Contraseña</label>
-      <small class="text-danger mt-3 mt-lg-0" *ngIf="passwordNoValido">
+      <small class="text-danger mt-3" *ngIf="passwordNoValido">
         Ingrese una contraseña válida
       </small>
     </div>
