--- a/src/app/components/card-silabo/card-silabo.component.html
+++ b/src/app/components/card-silabo/card-silabo.component.html
@@ -2,7 +2,14 @@
   <div class="card-body">
     <span class="card-title d-flex justify-content-between align-items-center">
       <span class="h5">{{ silabo?.asig_nombre | truncate: "5" }}</span>
-      <button class="btn btn-outline-danger">
+      <button
+        class="btn"
+        [ngClass]="{
+          'btn-danger': silabo?.favorito,
+          'btn-outline-danger': !silabo?.favorito
+        }"
+        (click)="updateFavoritos(silabo?.asig_periodo_id, silabo?.favorito)"
+      >
         <fa-icon [icon]="faHeart"></fa-icon>
       </button>
     </span>
@@ -19,7 +26,10 @@
         <a class="btn btn-info" (click)="editSilabo()">
           <fa-icon [icon]="faPen"></fa-icon>
         </a>
-        <button class="btn btn-warning mx-1" (click)="deleteSilabo()">
+        <button
+          class="btn btn-warning mx-1"
+          (click)="deleteSilabo(silabo?.asig_periodo_id)"
+        >
           <fa-icon [icon]="faTrashAlt"></fa-icon>
         </button>
         <button
